z-index fix

--- a/javascript/components/search/search.less
+++ b/javascript/components/search/search.less
@@ -3,6 +3,7 @@
 .search {
  position: relative;
  .results {
+   z-index: 3;
    position: absolute;
    background-color: #fff;
    list-style: none;
